--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "app.js",
     "dev": "nodemon app.js"
@@ -26,6 +25,7 @@
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "nodemon": "^3.1.10"
   }
 }
